--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,7 @@
 body {
   background-color: #286da8;
-   margin-top: -22px; 
-  margin-bottom: 0px; 
-  margin-left: 0px; 
-  margin-right: 0px;
+  margin: 0;
+  height: 100%;
 }
 
 h1 {
