--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,5 +1,5 @@
 <br>
-<h1>The Only Travel Planner You'll Ever Need Period</h1>
+<h1>Travel Planner JS</h1>
 <div class="topDiv">
   <h3>Where Do You Want To Go?</h3>
   <form>
