--- a/client/style.css
+++ b/client/style.css
@@ -1,11 +1,7 @@
 body {
-  background-color: #286da8;
+  background-color: white;
   margin: 0;
   height: 100%;
-}
-
-h1 {
-  color: white;
 }
 
 h3 {
@@ -24,6 +20,48 @@ li {
   padding-bottom: 10px
 }
 
+.topDiv {
+  background-color: #286da8;
+  height: 50px; 
+  /*border-color: black;
+  border-width: 10px;
+  border-style: solid;*/
+  display: table;
+  width: 100%;
+}
+
+#icon {
+  width: 30px;
+  float: left;
+  padding-left: 40px;
+  display: table-cell;
+  margin-top: 10px;
+  padding-right: 5px;
+}
+
+
+#title {
+  color: white;
+  font-size: 2em;
+  font-family: arial;
+  display: table-cell;
+  text-align:center;
+  vertical-align: center;
+  width: 70%;
+  padding-left: 50px;
+
+}
+
+#save_bttn {
+  color: white;
+  background-color: #286da8;
+  border-style: none;
+  float: right;
+  margin-right: 30px;
+  display: table-cell;
+  margin-top: 5px;
+}
+
 .leftDiv {
   float: left;
   width: 30%;
@@ -38,10 +76,10 @@ li {
   clear:both;
 }
 
-.container {
+/*.container {
   text-align: center;
   background-color: #286da8;
-}
+}*/
 
 .input {
   width: 70%;
@@ -61,11 +99,6 @@ li {
 
 ::-webkit-input-placeholder {
    color: #b37d4e;
-}
-
-.topDiv {
-  background-color: #286da8;
-  height: 110px
 }
 
 .cityDiv {
@@ -118,14 +151,4 @@ li {
   margin-top: -5px;
   background-color: #438496;
   border-style: none;
-}
-
-#save_bttn {
-  color: #b37d4e;
-  border-color: #b37d4e;
-  border-style: solid;
-  background-color: #286da8;
-  margin-top: 10px;
-  float: left;
-  margin-left: 10px;
 }
